--- a/packages/index.scss
+++ b/packages/index.scss
@@ -50,14 +50,15 @@ $paper_size: 0.25rem;
 .doc-a4 {
   max-width: 100%;
   margin: auto;
-  margin-top: 1em;
+  margin-top: 1rem;
   // width: 210 * $paper_size;
   // max-height: 297 * $paper_size;
   // max-height: calc(100vh - 200px);
   border:1px  solid #f1f1f1;
   box-sizing: border-box;
   // padding: 28 * $paper_size 25 * $paper_size;
-  padding: 1em 2em;
+  // padding: 1rem 2rem;
+  padding: 0.2rem;
   background: #fff;
   overflow-y:auto
 }
