--- a/packages/index.scss
+++ b/packages/index.scss
@@ -1,10 +1,49 @@
 .ediotr-container {
+  .flex-row {
+    display: flex;
+    flex-direction: row;
+  }
+  .al-c{
+    align-items: center;
+  }
   position:relative;
   .doc-dir {
     position: fixed;
   }
-  .user-box {
+
+  .w-20{
+    width: 20px;
   }
+  .h-20{
+     height: 20px;
+  }
+  .border-20{
+    border-radius: 20px;
+  }
+  .bg-primary{
+    background-color: rgba(#000,0.1);
+  }
+  .head-box{
+    font-size: 14px;
+    color:darkgreen;
+    margin-top: .2em;
+     opacity: .4;
+    cursor: pointer;
+    .head {
+      width: 1em;
+      height: 1em;
+      border-radius: 2px;
+      display: inline-block;
+      background-color: rgba(#000, 0.1);
+      background-size: 100%;
+    }
+
+    .username {
+      margin-left: .5em;
+     
+    }
+  }
+  
 }
 .fixed-header {
   // position: fixed;
