--- a/packages/reset.scss
+++ b/packages/reset.scss
@@ -9,7 +9,17 @@
   .ProseMirror-selectednode {
     outline: 3px solid #333;
   }
-
+  readdisable{
+    opacity: 0.1;
+    // display: none;
+  }
+  writedisable{
+    // opacity: 1;
+    // background-color: #0095f2;
+    color: red;
+    cursor: not-allowed;
+  }
+  
   ul[data-type="taskList"] > li {
     list-style: none;
     display: flex;
@@ -22,12 +32,7 @@
   ul[data-type="taskList"] label {
     margin-right: 0.5em;
   }
-  ul,
-  .no-edit{
-    position: relative;
-    opacity: 0.9;
-    cursor: not-allowed;
-  }
+  ul
   ol {
     padding: 0 1rem;
     padding-left: 25px;
