--- a/packages/index.scss
+++ b/packages/index.scss
@@ -100,7 +100,7 @@ $paper_size: 0.25rem;
 .doc-a4 {
   max-width: 100%;
   margin: auto;
-  margin-top: 1rem;
+  // margin-top: .5rem;
   // width: 210 * $paper_size;
   // max-height: 297 * $paper_size;
   // max-height: calc(100vh - 200px);
